turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:6: error: ';' expected but 'else' found.
		else
                ^LangtonsAnt:14: error: ':' expected but ')' found.
def setColor(Color) {
                  ^LangtonsAnt:29: error: identifier expected but '}' found.
}
^